# System-Analysis-Control-Console

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  common.cpp  common.h  config.kcfg  confighandler.cpp  confighandler.h  graphdatahandler.cpp  graphdatahandler.h  main.cpp  pnidhandler.cpp  pnidhandler.h  resources.qrc  tcpstreamhandler.cpp  tcpstreamhandler.h  themehandler.cpp  themehandler.h
src/contents/ui/: home.qml  main.qml  pnidview.qml
src/contents/ui/components/: .directory  BackendConnection.qml  DebugRectangle.qml  PnidSvgLabel.qml  PnidUiLabel.qml  SettingsDialog.qml
src/contents/ui/pnid_elements/: Barrier.qml  Container.qml  GasBottle.qml  Led.qml  LightBarrier.qml  MagazineEjector.qml  Motor.qml  PickAndPlace.qml  ProximitySensor.qml  ReflectivitySensor.qml  RfidReadWrite.qml  Switch.qml  Tank.qml  ValveSolenoid.qml
src/contents/ui/pnids/: pnidTest.qml
src/contents/ui/popup_components/: DigitalInput.qml  DropdownSelector.qml  Graph.qml  NumberInput.qml  SliderInput.qml  ValueDisplay.qml
